--- a/src/IndoorNav/Api.Forms/Api.Forms/Pages/Beacons/ManagedBeaconPage.xaml
+++ b/src/IndoorNav/Api.Forms/Api.Forms/Pages/Beacons/ManagedBeaconPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:beacons="clr-namespace:Api.Forms.Pages.Beacons;assembly=Api.Forms"
-             xmlns:managed="clr-namespace:Libs.Beacons.Managed.TrilaterationFlow;assembly=Libs.Beacons"
+             xmlns:trilaterationFlow="clr-namespace:Libs.Beacons.Managed.Flows.TrilaterationFlow;assembly=Libs.Beacons"
              x:Class="Api.Forms.Pages.Beacons.ManagedBeaconPage"
              x:DataType="beacons:ManagedBeaconViewModel"
              Title="Sphere Scan (Managed)">
@@ -11,6 +11,18 @@
         <ToolbarItem Text="Set Region" Command="{Binding SetRegion}"  Order="Primary" Priority="1"/>
         <ToolbarItem Text="Clear Region" Command="{Binding ClearRegion}"  Order="Primary" Priority="2"/>
     </ContentPage.ToolbarItems>
+    
+    <!-- <ContentPage.Resources> -->
+    <!--     <ResourceDictionary> -->
+    <!--         <Style x:Key="listItemStyle" TargetType="Grid"> -->
+    <!--             <Style.Triggers> -->
+    <!--                 <Trigger Property="Entry.IsFocused" Value="True" TargetType="Entry"> -->
+    <!--                     <Setter Property="TextColor" Value="Red" /> -->
+    <!--                 </Trigger> -->
+    <!--             </Style.Triggers> -->
+    <!--         </Style> -->
+    <!--     </ResourceDictionary> -->
+    <!-- </ContentPage.Resources> -->
     
     <ContentPage.Content>
         <StackLayout>
@@ -37,8 +49,8 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <ViewCell.View >
-                                <Grid x:DataType="managed:ManagedSphere" VerticalOptions="Fill" HorizontalOptions="Fill">
+                            <ViewCell.View>
+                                <Grid x:DataType="trilaterationFlow:ManagedSphere" VerticalOptions="Fill" HorizontalOptions="Fill">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
