Fix bug in Set region for becon ranging

--- a/src/IndoorNav/Api.Forms/Api.Forms/Pages/MainPage.xaml
+++ b/src/IndoorNav/Api.Forms/Api.Forms/Pages/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Api.Forms"
-             x:Class="Api.Forms.MainPage">
+             x:Class="Api.Forms.Pages.MainPage">
 
     <StackLayout>
         <!-- Place new controls here -->
